# CPP-RPGGame

./: .gitignore
AtticsAndAngels/: AIController.cpp  AIController.h  AIEnimy.cpp  AIEnimy.h  AtticsAndAngels.cpp  CMakeLists.txt  CMakeSettings.json  Character.cpp  Character.h  CharacterAnimator.cpp  CharacterAnimator.h  Class.h  Damage.cpp  Damage.h  InitiativeController.cpp  InitiativeController.h  JsonSaveLoad.h  Magic.cpp  Magic.h  Melee.cpp  Melee.h  Player.cpp  Player.h  PlayerTeam.cpp  PlayerTeam.h  Ranged.cpp  Ranged.h  Stats.cpp  Stats.h  Vault.cpp  Vault.h  Weapon.cpp  Weapon.h
AtticsAndAngels/Screens/: UIHelpers.h  screem_logo.cpp  screen_ending.cpp  screen_gameplay.cpp  screen_options.cpp  screen_teamCreation.cpp  screen_title.cpp  screens.h
AtticsAndAngels/resources/AI/: Angel.json  ArchAngel.json  ArchCleric.json  Body.json  Body2.json  Bowman - Copy.json  Bowman.json  Cleric - Copy.json  Cleric.json  Daemon - Copy.json  Daemon.json  GreaterDaemon.json  MaxWizzard.json  SwordSavant.json  Swordsman - Copy.json  Swordsman.json
AtticsAndAngels/resources/Characters/: Bowman.json
AtticsAndAngels/resources/Classes/: Angel.json  Cleric.json  Daemon.json  Fighter.json  Savant.json  Wizard.json
AtticsAndAngels/resources/Weapons/: Bow.json  Staff.json  Sword.json
